--- a/data_explore/data_explore.Rmd
+++ b/data_explore/data_explore.Rmd
@@ -75,7 +75,9 @@ spp_list <- spp_list %>%
 spp_list <- spp_list %>%
   left_join(read.csv(file.path(dir_data, 'sciname_lookups/spp_groupnames.csv'), 
                      stringsAsFactors = FALSE),
-            by = 'spp_group')
+            by = 'spp_group') %>%
+  mutate(spp_group = ifelse(str_detect(spp_group, 'corals'), 'corals', spp_group))
+    ### lump all corals together just for ease of handling
 
 write.csv(spp_list, file.path(dir_data, 'spp_list_w_area_trimmed.csv'))
 
